--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
     <section id="mapa" class="mb-5">
       <h2 class="fw-bold mb-3">Mapa general</h2>
-      <iframe class="map-embed" src="https://www.google.com/maps/d/embed?mid=1e5VnQ1m8mXzTQn9Pfx8nHqXYYdVxK0o&ehbc=2E312F"></iframe>
+      <iframe class="map-embed" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190421.71398984947!2d-0.2753997!3d39.800299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6041ab5cf0b7f5%3A0x90f4095d2e2c4d94!2sLa%20Vall%20d'Uix%C3%B3%2C%20Castell%C3%B3n!5e0!3m2!1ses!2ses!4v1691400000000!5m2!1ses!2ses" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
   </main>
 
